@startuml
class ResourceAdapter {
    hasLink(relation: string): boolean
    getEmbeddedResources(resourceName: string): Array<ResourceObject>
    toResourceProperty(): ResourceProperty
    getEmbeddedObjects(): Array<ResourceProperty>
    getChildProperties(): Array<ResourceProperty>
}
class ResourceProperty {
    isArray(): boolean
    isObject(): boolean
    getName(): string
}
class ResourceLink
class ResourceDescriptor {
    getTitle(): string
    toFormField(): FormField
}

ResourceAdapter ..> ResourceProperty
ResourceAdapter ..> "*" ResourceLink
ResourceAdapter ..> ResourceDescriptor

class AbstractProperty<<abstract>> {
    getDisplayValue()
    getFormValue()
}
ResourceAdapter --|> AbstractProperty
ResourceProperty --|> AbstractProperty
@enduml
